@@ -1,7 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.603 2006/02/27 20:35:34 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.604 2006/02/28 13:30:03 agaffney Exp $
+
+  28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIClientController.py:
+  accept 'none' as well as 'null' for network type
 
   27 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
